--- a/css/components/shared/scrollbar/scrollbar.css
+++ b/css/components/shared/scrollbar/scrollbar.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px px #eeeaf4;
+  box-shadow: inset 0 0 5px #eeeaf4;
   border-radius: 10px;
 }
 
