--- a/css/components/shared/scrollbar/scrollbar.scss
+++ b/css/components/shared/scrollbar/scrollbar.scss
@@ -8,6 +8,6 @@
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px px #eeeaf4; //var(--colors-input)
+  box-shadow: inset 0 0 5px #eeeaf4; //var(--colors-input)
   border-radius: 10px;
 }
